[package]
name = "audit_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features= ["macros"] }
csv = "1.4.0"
dotenv = "0.15.0"
json = "0.12.4"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = "0.23.37"
serde = {version =  "1.0.228", features = ["derive"]} 
serde_json = "1.0.149"
tokio = {version = "1.50.0" , features = ["rt-multi-thread"] }

